# GhostMeshBrain

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  analyze_run.py  observe_encoding_demo.py  plot_vitals.py  stress_test.py
genesis/: GHOST_GENESIS_DOCTRINE.md  the_first_word.md
repro_25k/: diary_cl1.0.db  state_cl1.0.json  summary.json  vitals_cl1.0.jsonl
results/: summary_10k.json  summary_10k_balanced.json  summary_multiagent_15k.json  summary_multiagent_25k.json  vitals_10k.jsonl  vitals_10k_balanced.jsonl
scripts/: bifurcation_experiment.py  dashboard.py  ghostbrain.sh  ghoststate.sh  mortality_lineage_experiment.py  plot_bifurcation_sweep.py  plot_lineage_experiment.py  run_ablation.py
tests/: __init__.py  test_adaptive_behavior.py  test_brain_layers.py  test_collapse_probe.py  test_diary.py  test_environment.py  test_ethics.py  test_functional_memory.py  test_g_factor.py  test_goal_engine.py  test_inference.py  test_integration.py  test_learning.py  test_limbic.py  test_long_run.py  test_metabolic.py  test_mortality_lineage.py  test_new_features.py  test_observation.py  test_personality.py  test_phase3.py  test_phase4.py  test_phase6.py  test_soul_descent_forge.py  test_soul_tension.py  test_stressor.py  test_subsystems.py  test_terrain_and_social.py  test_thermo_costs.py  test_world.py
thermodynamic_agency/: __init__.py  __main__.py  pulse.py  run_logger.py
thermodynamic_agency.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+51 files in other folders)
