[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermodynamic_agency"
version = "0.1.0"
description = "GhostMesh — a bio-digital thermodynamic organism"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["AI", "active-inference", "thermodynamics", "autonomous-agent"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thermodynamic_agency*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
